--- a/trunk/Obi/Obi/Obi.csproj
+++ b/trunk/Obi/Obi/Obi.csproj
@@ -245,6 +245,12 @@
     <Compile Include="ProjectView\ContainerBlock.Designer.cs">
       <DependentUpon>ContainerBlock.cs</DependentUpon>
     </Compile>
+    <Compile Include="ProjectView\ContentView.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="ProjectView\ContentView.Designer.cs">
+      <DependentUpon>ContentView.cs</DependentUpon>
+    </Compile>
     <Compile Include="ProjectView\InheritedTOCView.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -440,6 +446,10 @@
     <EmbeddedResource Include="ProjectView\ContainerBlock.resx">
       <DependentUpon>ContainerBlock.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ProjectView\ContentView.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>ContentView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ProjectView\EditableLabel.resx">
       <SubType>Designer</SubType>
