--- a/trunk/Obi/Obi/Obi.csproj
+++ b/trunk/Obi/Obi/Obi.csproj
@@ -139,6 +139,12 @@
     <Compile Include="Dialogs\Help.Designer.cs">
       <DependentUpon>Help.cs</DependentUpon>
     </Compile>
+    <Compile Include="Dialogs\ImportFileSplitSize.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Dialogs\ImportFileSplitSize.Designer.cs">
+      <DependentUpon>ImportFileSplitSize.cs</DependentUpon>
+    </Compile>
     <Compile Include="Dialogs\NewProject.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -426,6 +432,10 @@
     <EmbeddedResource Include="Dialogs\Help.resx">
       <SubType>Designer</SubType>
       <DependentUpon>Help.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Dialogs\ImportFileSplitSize.resx">
+      <DependentUpon>ImportFileSplitSize.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Dialogs\PhraseProperties.resx">
       <DependentUpon>PhraseProperties.cs</DependentUpon>
