--- a/trunk/Obi/Obi/Obi.csproj
+++ b/trunk/Obi/Obi/Obi.csproj
@@ -248,6 +248,12 @@
       <DependentUpon>Mp3EncoderForm.cs</DependentUpon>
     </Compile>
     <Compile Include="PipelineInterface\ScriptParser.cs" />
+    <Compile Include="PipelineInterface\ValidatorForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PipelineInterface\ValidatorForm.designer.cs">
+      <DependentUpon>ValidatorForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Playlist.cs" />
     <Compile Include="Presentation.cs" />
     <Compile Include="Program.cs" />
@@ -473,6 +479,10 @@
     </EmbeddedResource>
     <EmbeddedResource Include="PipelineInterface\Mp3EncoderForm.resx">
       <DependentUpon>Mp3EncoderForm.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PipelineInterface\ValidatorForm.resx">
+      <DependentUpon>ValidatorForm.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="ProjectView\Block.resx">
