--- a/Obi/Obi/Obi.csproj
+++ b/Obi/Obi/Obi.csproj
@@ -157,6 +157,12 @@
     <Compile Include="Dialogs\PhraseProperties.designer.cs">
       <DependentUpon>PhraseProperties.cs</DependentUpon>
     </Compile>
+    <Compile Include="Dialogs\ProjectStatistics.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Dialogs\ProjectStatistics.Designer.cs">
+      <DependentUpon>ProjectStatistics.cs</DependentUpon>
+    </Compile>
     <Compile Include="Dialogs\SectionProperties.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -452,6 +458,10 @@
     <EmbeddedResource Include="Dialogs\PhraseProperties.resx">
       <DependentUpon>PhraseProperties.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Dialogs\ProjectStatistics.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>ProjectStatistics.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Dialogs\SectionProperties.resx">
       <DependentUpon>SectionProperties.cs</DependentUpon>
