--- a/Obi/Obi/Obi.csproj
+++ b/Obi/Obi/Obi.csproj
@@ -247,12 +247,48 @@
     <Compile Include="ObiNode.cs" />
     <Compile Include="ObiNodeFactory.cs" />
     <Compile Include="PhraseNode.cs" />
+    <Compile Include="PipelineInterface\DataTypes\BoolDataType.cs" />
+    <Compile Include="PipelineInterface\DataTypes\EnumDataType.cs" />
+    <Compile Include="PipelineInterface\DataTypes\IDataTypes.cs" />
+    <Compile Include="PipelineInterface\DataTypes\PathDataType.cs" />
     <Compile Include="PipelineInterface\Mp3EncoderForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="PipelineInterface\Mp3EncoderForm.designer.cs">
       <DependentUpon>Mp3EncoderForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="PipelineInterface\ParameterControls\BaseUserControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="PipelineInterface\ParameterControls\BaseUserControl.Designer.cs">
+      <DependentUpon>BaseUserControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="PipelineInterface\ParameterControls\BoolControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="PipelineInterface\ParameterControls\BoolControl.Designer.cs">
+      <DependentUpon>BoolControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="PipelineInterface\ParameterControls\EnumControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="PipelineInterface\ParameterControls\EnumControl.Designer.cs">
+      <DependentUpon>EnumControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="PipelineInterface\ParameterControls\PathBrowserControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="PipelineInterface\ParameterControls\PathBrowserControl.Designer.cs">
+      <DependentUpon>PathBrowserControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="PipelineInterface\PipelineInfo.cs" />
+    <Compile Include="PipelineInterface\PipelineInterfaceForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PipelineInterface\PipelineInterfaceForm.Designer.cs">
+      <DependentUpon>PipelineInterfaceForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="PipelineInterface\ScriptParameter.cs" />
     <Compile Include="PipelineInterface\ScriptParser.cs" />
     <Compile Include="PipelineInterface\ValidatorForm.cs">
       <SubType>Form</SubType>
@@ -514,6 +550,26 @@
     <EmbeddedResource Include="PipelineInterface\Mp3EncoderForm.resx">
       <DependentUpon>Mp3EncoderForm.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PipelineInterface\ParameterControls\BaseUserControl.resx">
+      <DependentUpon>BaseUserControl.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PipelineInterface\ParameterControls\BoolControl.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>BoolControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PipelineInterface\ParameterControls\EnumControl.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>EnumControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PipelineInterface\ParameterControls\PathBrowserControl.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>PathBrowserControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PipelineInterface\PipelineInterfaceForm.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>PipelineInterfaceForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PipelineInterface\ValidatorForm.resx">
       <DependentUpon>ValidatorForm.cs</DependentUpon>
