First implementation of prioritizing selection for waveform rendering but seems unstable; to be improved.

--- a/Obi/Obi/Obi.csproj
+++ b/Obi/Obi/Obi.csproj
@@ -298,6 +298,7 @@
     </Compile>
     <Compile Include="Playlist.cs" />
     <Compile Include="Presentation.cs" />
+    <Compile Include="PriorityQueue.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="ProjectView\Block.cs">
       <SubType>UserControl</SubType>
